Make arguments that use floats and doubles work in all countries